force-app/main/default/objects/Leak_Alert__c/Leak_Alert__c.object-meta.xml
<CustomObject>
    <description>One pushed leak-alert digest. Persists Claude&apos;s ranking/explanation (or the deterministic template fallback) so AI output is queryable, reportable, and auditable.</description>
    <label>Leak Alert</label>
    <nameField>
        <displayFormat>LA-{0000}</displayFormat>
        <label>Alert Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leak Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>