force-app/main/default/objects/Leak_Alert__c/fields/Delivered_At__c.field-meta.xml
<CustomField>
    <fullName>Delivered_At__c</fullName>
    <description>When the digest was pushed to the owner.</description>
    <label>Delivered At</label>
    <type>DateTime</type>
</CustomField>