force-app/main/default/objects/Leak_Alert__c/fields/Leak_Count__c.field-meta.xml
<CustomField>
    <fullName>Leak_Count__c</fullName>
    <description>How many leaks this digest covers.</description>
    <label>Leak Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>