force-app/main/default/objects/Leak_Alert__c/fields/Narrative__c.field-meta.xml
<CustomField>
    <fullName>Narrative__c</fullName>
    <description>The ranked, plain-language explanation shown to the owner. Claude&apos;s output when it passed the figure guardrail, otherwise the deterministic template.</description>
    <label>Narrative</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>