force-app/main/default/objects/Leak_Alert__c/fields/Owner_User__c.field-meta.xml
<CustomField>
    <fullName>Owner_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The firm owner this digest was delivered to.</description>
    <label>Owner User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Leak Alerts</relationshipLabel>
    <relationshipName>Leak_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>