force-app/main/default/objects/Leak_Alert__c/fields/Total_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Value__c</fullName>
    <description>Sum of the estimated value of every leak in this digest.</description>
    <label>Total Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>